[tool.poetry]
name = "snake-game"
version = "0.1.0"
description = "Simpple game in tutorial 'Python on podstaw - Marcin Moskala'."
authors = ["sebastianLedzianowski <136706736+sebastianLedzianowski@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
